feat: init sans object feature (#983)
* feat: init sans object feature

* refactor: remove Spring boot context from tests

* feat: create annotation for SpringBootTest config

* fix: update .gitignore

* fix: solve sonar issues

* feat: be able to get rubric without object

* fix: solve some Intellij Idea issues

* fix: solve types